https://community.anytype.io/t/improve-alignment-of-ui-elements/11874/10 fix

--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -66,6 +66,12 @@
 	.side.left { padding-left: 120px; }
 }
 
+html:not(.platformMac) {
+	.header:not(.withSidebar) {
+		.side.left { padding-left: 52px; }
+	}
+}
+
 body.isFullScreen {
 	.header:not(.withSidebar) {
 		.side.left { padding-left: 52px; }
